@@ -10,10 +10,9 @@ import za.ac.cput.domain.Client;
 import za.ac.cput.repository.ClientIRepository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
-public class ClientService implements ClientIService {
+public class ClientService implements ClientIService{
 
     private final ClientIRepository clientIRepository;
 
@@ -30,7 +29,6 @@ public class ClientService implements ClientIService {
     @Override
     public Client read(String clientId) {
         return this.clientIRepository.findById(clientId).orElse(null);
-
     }
 
     @Override
@@ -45,11 +43,11 @@ public class ClientService implements ClientIService {
 
     @Override
     public List<Client> getAll() {
-        return this.clientIRepository.findAll().stream().collect(Collectors.toList());
+        return this.clientIRepository.findAll().stream().toList();
     }
 
     @Override
     public Client findClientById(String id) {
-        return this.clientIRepository.findClientByClientId(id);
+        return this.clientIRepository.findById(id).orElse(null);
     }
 }
